<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/overview_textbox"
            style="@style/CategoryStyle"
            android:layout_marginLeft="20dp"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical"
            android:layout_marginRight="20dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/book_name_textbox"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/price_textbox"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/quantity_textbox"
            style="@style/CategoryStyle"/>

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_textbox"
            style="@style/CategoryStyle"
            android:layout_marginLeft="20dp"/>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:layout_marginRight="20dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/supplier_name_hint"
                android:inputType="text"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_supplier_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_number_hint"
            style="@style/CategoryStyle"
            android:layout_marginLeft="20dp"/>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:layout_marginRight="20dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_supplier_number"
                android:hint="Supplier Number"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>